# bbchallenge-deciders

./: .gitignore  README.md
argument-cyclers/: go.mod  go.sum  main.go  main_test.go
argument-description_full/: Makefile  README.md  description_full.c
argument-translated-cyclers/: go.sum  main.go  main_test.go
argument-translated-cylers/: go.mod  main.go
decider-backward-reasoning/: go.mod  main.go  main_test.go
decider-bouncers-reproduction/: .gitignore  Cargo.toml  all_DP_formula_tapes.txt  all_greedy_formula_tapes.txt  bb5_undecided_machines.csv  bouncers_certs_250k_steps_50k_macro_steps_20_formula_limit.csv  bouncers_certs_250k_steps_50k_macro_steps_20_formula_limit.tsv  cosmo_bouncers_certs_250k_50k_10.csv  cosmo_bouncers_certs_greedy_250k_50k_20.csv  cosmo_bouncers_decided_10k.txt  cosmo_bouncers_decided_250k_50k_114.txt  out.txt  savask_formula_tapes_examples_hard.txt
decider-bouncers-reproduction/misc/: savask_formula_tapes_examples.txt  undecided_after_bouncers.txt
decider-bouncers-reproduction/src/: directional_tm.rs  formula_tape.rs  lib.rs  main.rs
decider-bouncers-reproduction/src/directional_tm/: mod.rs  parsing.rs
decider-bouncers-reproduction/src/formula_tape/: alignment.rs  bouncer_certificate.rs  bouncers_decider.rs  formula_tape_guessing.rs  memo.rs  mod.rs  parsing.rs  shift_rule_detection.rs  special_case.rs  test.rs
decider-closed-states/: README.md  bbchallenge_utils.py  main.py  main_test.py  requirements.txt
decider-cyclers/: go.mod  main_test.go
decider-description_full/: description_full.c
decider-finite-automata-reduction/: Cargo.toml  README.md
decider-finite-automata-reduction-reproduction/: .gitignore  DVF-to-graphviz.ipynb  README  README.md  decider_FAR_direct.py  parser_FAR_dvf.py  requirements-dev.txt  requirements.txt  solver_FAR_NFA_direct.py  tm_utils.py  verifier_FAR_NFA_DFA.py
decider-finite-automata-reduction/src/: main.rs
decider-finite-automata-reduction/src/core/: algebra.rs  dfa.rs  error.rs  limits.rs  machine.rs  nfa.rs  proof.rs
decider-finite-automata-reduction/src/driver/: mod.rs  node_crunch.rs  progress.rs
decider-finite-automata-reduction/src/io/: db.rs  dvf.rs  index.rs  mod.rs  output.rs
decider-finite-automata-reduction/src/provers/: dfa_iterator.rs  direct.rs  mitm_dfa.rs  mod.rs  prover.rs
decider-halting-segment/: Sketch of Proof.txt  go.mod  go.sum  main.go  main_test.go
decider-halting-segment-reproduction/: Cargo.toml
decider-halting-segment-reproduction/decider_halting_segment/: Cargo.toml
decider-halting-segment-reproduction/decider_halting_segment/benches/: benchmarks-criterion.rs
decider-halting-segment-reproduction/decider_halting_segment/src/: lib.rs  node.rs  tm.rs
decider-halting-segment-reproduction/dhs_app/: Cargo.toml
decider-halting-segment-reproduction/dhs_app/src/: main.rs
decider-loops-reproduction/: Decider_Loop.v  bb5_verified_enumeration.csv  loops_coq_bb5_literal_transcription.py  out.txt  trace.txt  trace_to_coq.py
decider-ngram-cps-reproduction/: .gitignore  NGramCPS_coq_bb5.py  NGramCPS_coq_bb5_literal_transcription.py  README.md  decider.py  decider_coq_bb5.py  (+3 more)
(+98 files in other folders)
