[package]
name = "decider-bouncers-reproduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
ndarray = "0.15.6"
rayon = "1.10.0"
indicatif = { version = "*", features = ["rayon"] }
