[package]
name = "decider-finite-automata-reduction"
version = "0.1.0"
authors = ["Justin Blanchard <UncombedCoconut@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = 1
lto = "thin"

[dependencies]
argh = "0.1.9"
cadical = "0.1.13"
custom_error = "1.9.2"
indicatif = "0.17.1"
itertools = "0.10.5"
node_crunch = "0.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
zerocopy = "0.6.1"